# paperscraper2

./: .gitignore  Cargo.toml  README.md  build.sh  clean.sh  local.env  main.tf  paperscraper.env
arxiv/: Cargo.toml
arxiv/src/: config.rs  constants.rs  lib.rs  parser.rs  prompt.rs
src/: agent.rs  batch.rs  config.rs  format.rs  lib.rs  model.rs  parser.rs  prompt.rs  storage.rs  utils.rs
