[package]
name = "paperscraper"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = "0.12.12"
quick-xml = { version = "0.37.2", features = ["serialize"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
lambda_runtime = "0.13.0"
aws-config = { version = "1.5.14", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.70.0"
aws-sdk-bedrockruntime = "1.70.0"
serde_json = "1.0.137"
regex = "1.11.1"
uuid = { version = "1.12.1", features = ["v4"] }
async-openai = "0.27.2"
